--- a/_sass/themes/hyde/_index.scss
+++ b/_sass/themes/hyde/_index.scss
@@ -7,7 +7,7 @@
 $global-use-theme: true; // set to use theme
 $theme-max-breakpoint: 1224px;
 
-$theme-box-enable: true;
+$theme-box-enable: false;
 $theme-button-enable: true;
 $theme-card-enable: true;
 $theme-dropdown-enable: false;
